--- a/CardMania/CardMania/CardMania.csproj
+++ b/CardMania/CardMania/CardMania.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BlackJack.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Deck.cs" />
+    <Compile Include="GoFish.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="War.cs" />
